[metadata]
name = pylearnlite
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A pure-Python machine learning and deep learning framework with no external dependencies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/pylearnlite
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.extras_require]
docs = sphinx
tests = pytest
